--- a/default.css
+++ b/default.css
@@ -26,7 +26,7 @@ body
 
 a
 {
-	color: #AF0A0A;
+	color: #b91d2b;
 	text-decoration: underline;
 }
 
@@ -51,7 +51,7 @@ a:hover
 	width: 15em;
 	float: left;
 	position: relative;
-	background: #AF0A0A url('../images/ping.png') top left no-repeat;
+	background: #b91d2b url('../images/ping.png') top left no-repeat;
 }
 
 #header h1
