--- a/default.css
+++ b/default.css
@@ -129,7 +129,7 @@ a:hover
 {
 	background: #fff url('images/a3.gif') top left repeat-x;
 	margin-top: 1px;
-	padding-top: .5em;
+	padding-top: 2em;
 }
 
 #content p
