--- a/default.css
+++ b/default.css
@@ -150,6 +150,7 @@ a:hover
 
 #content h2,h3,h4,h5,h6
 {
+	margin-bottom: 1em;
 	padding-bottom: 0.2em;
 	margin-bottom: 1.2em;
 	border-bottom: dotted 1px #cacaca;
