still CSSing over here

--- a/default.css
+++ b/default.css
@@ -152,7 +152,7 @@ a:hover
 {
 	margin-bottom: 1.2em;
 	margin-top: 1.2em;
-	border-bottom: dotted 1px #cacaca;
+	border-top: dotted 1px #cacaca;
 }
 
 #content ul
